--- a/master.yaml
+++ b/master.yaml
@@ -3,16 +3,13 @@ Description: >
     This template deploys a VPC, with a pair of public and private subnets spread 
     across two Availabilty Zones. It deploys an Internet Gateway, with a default 
     route on the public subnets. It deploys a pair of NAT Gateways (one in each AZ), 
-    and default routes for them in the private subnets.
+    and default routes for them in the private subnets. It adds a APIGateway.
 
     It then deploys a highly available ECS cluster using an AutoScaling Group, with 
     ECS hosts distributed across multiple Availability Zones. 
 
     Finally, it deploys a pair of example ECS services from containers published in 
     Amazon EC2 Container Registry (Amazon ECR).
-
-    Last Modified: 22nd September 2016
-    Author: Paul Maddox <pmaddox@amazon.com>
 
 Resources:
 
@@ -22,11 +19,11 @@ Resources:
             TemplateURL: https://s3.amazonaws.com/transin-infra/infrastructure/vpc.yaml
             Parameters:
                 EnvironmentName:    !Ref AWS::StackName
-                VpcCIDR:            10.180.0.0/16
-                PublicSubnet1CIDR:  10.180.8.0/21
-                PublicSubnet2CIDR:  10.180.16.0/21
-                PrivateSubnet1CIDR: 10.180.24.0/21
-                PrivateSubnet2CIDR: 10.180.32.0/21
+                VpcCIDR:            10.192.0.0/16
+                PublicSubnet1CIDR:  10.192.8.0/21
+                PublicSubnet2CIDR:  10.192.16.0/21
+                PrivateSubnet1CIDR: 10.192.24.0/21
+                PrivateSubnet2CIDR: 10.192.32.0/21
 
     SecurityGroups:
         Type: AWS::CloudFormation::Stack
