--- a/services/website-service/service.yaml
+++ b/services/website-service/service.yaml
@@ -52,7 +52,7 @@ Resources:
             ContainerDefinitions:
                 - Name: website-service
                   Essential: true
-                  Image: 275396840892.dkr.ecr.us-east-1.amazonaws.com/ecs-refarch-cloudformation/website-service:1.0.0
+                  Image: 698747380200.dkr.ecr.ap-southeast-1.amazonaws.com/transin-infra/website:latest
                   Memory: 128
                   Environment: 
                     - Name: PRODUCT_SERVICE_URL
