--- a/master.yaml
+++ b/master.yaml
@@ -1,3 +1,5 @@
+AWSTemplateFormatVersion: '2010-09-09'
+
 Description: >
 
     This template deploys a VPC, with a pair of public and private subnets spread 
@@ -11,6 +13,59 @@ Description: >
     Finally, it deploys a pair of example ECS services from containers published in 
     Amazon EC2 Container Registry (Amazon ECR).
 
+Metadata:
+  AWS::CloudFormation::Interface:
+    ParameterGroups:
+    - Label:
+        default: Transin
+      Parameters:
+      - LaunchEmpire
+      - EmpireVersion
+    - Label:
+        default: Docker
+      Parameters:
+      - DockerUser
+      - DockerPass
+      - DockerEmail
+      - DockerRegistry
+    ParameterLabels:
+      LaunchEmpire:
+        default: Launch
+      EmpireVersion:
+        default: Daemon version
+      DockerUser:
+        default: kjvenky
+      DockerPass:
+        default: Lopa123#
+      DockerEmail:
+        default: kjvenky@gmail.com
+      DockerRegistry:
+        default: Registry
+        
+Parameters:
+  EmpireVersion:
+    Type: String
+    Default: master
+    Description: Docker tag to specify the version of Empire to run. This can be any
+      git branch or sha.
+  DockerRegistry:
+    Type: String
+    Description: The URL of the Docker registry to pull private images from.
+    Default: https://index.docker.io/v1/
+  DockerUser:
+    Type: String
+    Description: Username of a Docker registry user to pull images from private repositories.
+    Default: ''
+  DockerPass:
+    Type: String
+    Description: Password of a Docker registry user to pull images from private repositories.
+    Default: ''
+    NoEcho: true
+  DockerEmail:
+    Type: String
+    Description: Email of a Docker registry user to pull images from private repositories.
+    Default: ''
+  
 Resources:
 
     VPC:
@@ -43,6 +98,15 @@ Resources:
                 Subnets: !GetAtt VPC.Outputs.PublicSubnets
                 SecurityGroup: !GetAtt SecurityGroups.Outputs.LoadBalancerSecurityGroup
 
+    # APIGateway: 
+    #     Type: AWS::CloudFormation::Stack
+    #     Properties:
+    #         TemplateURL: https://s3.amazonaws.com/transin-infra/infrastructure/api-gateway.yaml
+    #         Parameters:
+    #             EnvironmentName: !Ref AWS::StackName
+    #             VPC: !GetAtt VPC.Outputs.VPC
+    #             Subnets: !GetAtt VPC.Outputs.PublicSubnets
+
     ECS:
         Type: AWS::CloudFormation::Stack
         Properties:
@@ -54,37 +118,3 @@ Resources:
                 VPC: !GetAtt VPC.Outputs.VPC
                 SecurityGroup: !GetAtt SecurityGroups.Outputs.ECSHostSecurityGroup
                 Subnets: !GetAtt VPC.Outputs.PrivateSubnets
-
-    ProductService:
-        Type: AWS::CloudFormation::Stack
-        Properties:
-            TemplateURL: https://s3.amazonaws.com/transin-infra/services/product-service/service.yaml
-            Parameters:
-                VPC: !GetAtt VPC.Outputs.VPC
-                Cluster: !GetAtt ECS.Outputs.Cluster
-                DesiredCount: 2
-                Listener: !GetAtt ALB.Outputs.Listener 
-                Path: /products
-
-    WebsiteService:
-        Type: AWS::CloudFormation::Stack
-        Properties:
-            TemplateURL: https://s3.amazonaws.com/transin-infra/services/website-service/service.yaml
-            Parameters:
-                VPC: !GetAtt VPC.Outputs.VPC
-                Cluster: !GetAtt ECS.Outputs.Cluster
-                DesiredCount: 2
-                ProductServiceUrl: !Join [ "/", [ !GetAtt ALB.Outputs.LoadBalancerUrl, "products" ]]
-                Listener: !GetAtt ALB.Outputs.Listener 
-                Path: /
-
-
-Outputs:
-
-    ProductServiceUrl: 
-        Description: The URL endpoint for the product service
-        Value: !Join [ "/", [ !GetAtt ALB.Outputs.LoadBalancerUrl, "products" ]]
-
-    WebsiteServiceUrl: 
-        Description: The URL endpoint for the website service
-        Value: !Join ["", [ !GetAtt ALB.Outputs.LoadBalancerUrl, "/" ]]
