--- a/infrastructure/bastion-instance.yaml
+++ b/infrastructure/bastion-instance.yaml
@@ -65,18 +65,6 @@ Parameters:
     Description: An environment name that will be prefixed to resource names
     Type: String
   
-  VPC:
-    Description: Choose which VPC this ECS cluster should be deployed to
-    Type: AWS::EC2::VPC::Id
-
-  Subnets:
-    Description: Choose which subnets this ECS cluster should be deployed to
-    Type: List<AWS::EC2::Subnet::Id>
-  
-  BastionSecurityGroup:
-    Description: SecurityGroups
-    Type: AWS::EC2::SecurityGroup::Id
-
   BastionAMIOS:
     AllowedValues:
     - Amazon-Linux-HVM
@@ -114,7 +102,7 @@ Parameters:
     AllowedValues:
     - 'true'
     - 'false'
-    Default: 'false'
+    Default: 'true'
     Description: To include a banner to be displayed when connecting via SSH to the
       bastion, set this parameter to true
     Type: String
@@ -122,7 +110,7 @@ Parameters:
   EnableTCPForwarding:
     Type: String
     Description: Enable/Disable TCP Forwarding
-    Default: 'false'
+    Default: 'true'
     AllowedValues:
     - 'true'
     - 'false'
@@ -413,7 +401,9 @@ Resources:
     Properties:
       LaunchConfigurationName:
         Ref: BastionLaunchConfiguration
-      VPCZoneIdentifier: !Ref Subnets
+      VPCZoneIdentifier:
+          - Fn::ImportValue: !Sub "${EnvironmentName}-public-subnet-1"
+          - Fn::ImportValue: !Sub "${EnvironmentName}-public-subnet-2"
       MinSize: 1
       MaxSize: !Ref NumBastionHosts
       Cooldown: '300'
@@ -481,7 +471,7 @@ Resources:
           - Ref: BastionAMIOS
           - Code
       SecurityGroups:
-      - Ref: BastionSecurityGroup
+      - Fn::ImportValue: !Sub "${EnvironmentName}-sg-bastion"
       InstanceType:
         Ref: BastionInstanceType
       UserData:
@@ -492,9 +482,6 @@ Resources:
             - 'export PATH=$PATH:/usr/local/bin
 
 '           
-            - 'yum install postgresql92-server.x86_64 postgresql92-contrib.x86_64 postgresql92-devel.x86_64
-
-'
             - 'which pip &> /dev/null
 
 '
@@ -566,7 +553,7 @@ Outputs:
     Description: Elastic IP 1 for Bastion
     Value:
       Ref: EIP1
-
+    
   EIP2:
     Condition: 2BastionCondition
     Description: Elastic IP 2 for Bastion
@@ -589,9 +576,4 @@ Outputs:
     Value:
       Ref: BastionMainLogGroup
     Description: CloudWatch Logs GroupName. Your SSH logs will be stored here.
-
-  BastionSecurityGroupID:
-    Value:
-      Ref: BastionSecurityGroup
-    Description: Bastion Security Group ID
 
