Update vpc.yaml to change EC2::VPC tenancy changed to default

--- a/infrastructure/vpc.yaml
+++ b/infrastructure/vpc.yaml
@@ -43,7 +43,7 @@ Resources:
             CidrBlock: !Ref VpcCIDR
             EnableDnsHostnames: true
             EnableDnsSupport: true
-            InstanceTenancy: dedicated
+            InstanceTenancy: default
             Tags: 
                 - Key: Name 
                   Value: !Ref EnvironmentName
