--- a/infrastructure/bastion-instance.yaml
+++ b/infrastructure/bastion-instance.yaml
@@ -94,7 +94,7 @@ Parameters:
     - m4.xlarge
     - m4.2xlarge
     - m4.4xlarge
-    Default: m3.large
+    Default: t2.nano
     Description: Amazon EC2 instance type for the bastion instances
     Type: String
 
