Added ECR repository based on the company and environment

--- a/infrastructure/pets-service.yaml
+++ b/infrastructure/pets-service.yaml
@@ -57,7 +57,7 @@ Resources:
             ContainerDefinitions:
                 - Name: pets-service
                   Essential: true
-                  Image: transin-ms/pets
+                  Image: kjvenky/pets
                   Memory: 64
                   PortMappings:
                     - ContainerPort: 3000
